@@ -2,23 +2,23 @@ package org.injector.tools.proxy.handler;
 
 import lombok.Getter;
 import lombok.Setter;
-import org.injector.tools.log.Logger;
+import lombok.extern.slf4j.Slf4j;
 import org.injector.tools.proxy.LocalProxy;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
+import java.nio.channels.ReadableByteChannel;
 import java.nio.channels.SelectionKey;
 import java.nio.channels.Selector;
 import java.nio.channels.ServerSocketChannel;
 import java.nio.channels.SocketChannel;
+import java.nio.channels.WritableByteChannel;
 import java.util.Iterator;
-import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
 
+@Slf4j
 @Setter
 @Getter
 public class ChannelSelector implements Closeable {
@@ -27,7 +27,7 @@ public class ChannelSelector implements Closeable {
     private Selector selector;
 
     public ChannelSelector() throws IOException {
-        this.service = Executors.newCachedThreadPool();
+        this.service = Executors.newVirtualThreadPerTaskExecutor();
         this.selector = Selector.open();
     }
 
@@ -44,9 +44,12 @@ public class ChannelSelector implements Closeable {
 
     public void startSelector() {
         try {
-            service.execute(this::startSelectorProcess);
+            Thread thread = new Thread(this::startSelectorProcess, "SelectorProcess");
+            thread.setDaemon(true);
+            thread.start();
+//            service.execute(this::startSelectorProcess);
         } catch (Exception e) {
-            Logger.debug(e.getClass(), "Message ", e.getMessage());
+            log.error("Error start daemon selector thread", e);
         }
     }
 
@@ -63,77 +66,113 @@ public class ChannelSelector implements Closeable {
     public void startSelectorProcess() {
         while (true) {
             try {
-                if (selector.select() > 0) {
-                    Set<SelectionKey> keys = selector.selectedKeys();
-                    Iterator<SelectionKey> iterator = keys.iterator();
-                    do {
-                        SelectionKey key = iterator.next();
-
-                        if (key.isValid() && key.isReadable()) {
-                            readKey(key);
-                        } else if (key.isValid() && key.isAcceptable()) {
-                            acceptKey(key);
-                        } else if (key.isValid() && key.isWritable()) {
-                            writeKey(key);
-                        } else if (key.isValid() && key.isConnectable()) {
-                            connectKey(key);
-                        }
-
-                        iterator.remove();
-                    } while (iterator.hasNext());
-
-                } else {
-                    TimeUnit.MILLISECONDS.sleep(100);
+                // block thread
+                selector.select(100);
+                Iterator<SelectionKey> iterator = selector.selectedKeys().iterator();
+                while (iterator.hasNext()) {
+                    SelectionKey key = iterator.next();
+                    iterator.remove();
+                    log.info("select key, isValid: {}", key.isValid());
+                    if (!key.isValid()) {
+                        continue;
+                    }
+                    if (key.isAcceptable()) {
+                        acceptKey(key);
+                    } else if (key.isReadable()) {
+                        readKey(key);
+                    } else if (key.isWritable()) {
+                        writeKey(key);
+                    } else if (key.isConnectable()) {
+                        connectKey(key);
+                    }
                 }
-            } catch (IOException e) {
-                Logger.debug(e.getClass(), "Message ", e.getMessage());
-            } catch (InterruptedException e) {
-                Logger.debug(e.getClass(), "Message ", e.getMessage());
+            } catch (Exception e) {
+                log.error("Error Message", e);
             }
-
-
         }
     }
 
     protected void connectKey(SelectionKey key) {
-        Logger.debug(getClass(), "connectKey");
-    }
-
-    protected void writeKey(SelectionKey key) {
-        Logger.debug(getClass(), "writeKey");
+        log.info("connectKey");
+        try {
+            var channel = (SocketChannel) key.channel();
+            channel.finishConnect();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     protected void acceptKey(SelectionKey key) {
-        ServerSocketChannel server = (ServerSocketChannel) key.channel();
-        try {
+        try (ServerSocketChannel server = (ServerSocketChannel) key.channel()) {
             SocketChannel client = server.accept();
-            Logger.debug(getClass(), "accept connection", client.getRemoteAddress().toString());
+            client.configureBlocking(false);
             LocalProxy localProxy = (LocalProxy) key.attachment();
-            service.execute(() -> {
-                localProxy.handle(client);
-            });
+//            client.register(selector, SelectionKey.OP_READ, localProxy);
+            localProxy.handle(client);
+//            service.submit(() -> localProxy.handle(client));
+            log.info("accept connection {}", client.getRemoteAddress().toString());
         } catch (IOException e) {
-            Logger.debug(e.getClass(), "Message ", e.getMessage());
-            Logger.debug(getClass(), "local proxy server  error");
+            log.error("local proxy server error", e);
         }
     }
 
     protected void readKey(SelectionKey key) {
+        if (key.attachment() instanceof SocketChannel) {
+            readSocketChannelKey(key);
+        } else if(key.attachment() instanceof ReadWriteOperation) {
+            handleReadWriteOperation(key);;
+        } else if (key.attachment() instanceof LocalProxy) {
+            readLocalProxyClient(key);
+        }
+    }
+
+    protected void handleReadWriteOperation(SelectionKey key) {
+        log.info("call syncData");
+        try {
+            ReadWriteOperation operation = (ReadWriteOperation) key.attachment();
+            operation.syncData();
+        } catch (Exception e) {
+            log.error("handleReadWriteOperation", e);
+        }
+    }
+
+    protected void readLocalProxyClient(SelectionKey key) {
+        service.execute(() -> {
+            ( (LocalProxy)key.attachment() ).handle((SocketChannel) key.channel());
+        });
+    }
+
+    protected void readSocketChannelKey(SelectionKey key) {
         SocketChannel input = (SocketChannel) key.channel();
         SocketChannel output = (SocketChannel) key.attachment();
-        ByteBuffer buffer = ByteBuffer.allocate(10 * 1024);
+        readChannel(input, output);
+    }
+
+    protected void readChannel(ReadableByteChannel input , WritableByteChannel output) {
         try {
+            ByteBuffer buffer = ByteBuffer.allocate(200 * 1024);
             while (input.read(buffer) > 0) {
                 buffer.flip();
                 while (buffer.hasRemaining()) {
                     output.write(buffer);
                 }
+                buffer.clear();
             }
         } catch (IOException e) {
-            Logger.debug(getClass(), "read/write opr", e.getMessage());
+            log.error( "error read/write operation, " + e.getMessage());
         }
+    }
 
+    protected void writeKey(SelectionKey key) {
+        if (key.attachment() instanceof SocketChannel) {
+            writeSocketChannelKey(key);
+        }
+    }
 
+    protected void writeSocketChannelKey(SelectionKey key) {
+        SocketChannel input = (SocketChannel) key.channel();
+        SocketChannel output = (SocketChannel) key.attachment();
+        readChannel(input, output);
     }
 
     @Override
@@ -141,6 +180,5 @@ public class ChannelSelector implements Closeable {
         closeSelector();
         service.shutdown();
     }
-
 
 }
